overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -102,23 +102,6 @@ html {
 	-webkit-text-size-adjust: 100%;
 }
 
-.page-loading {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	margin-left: -40px;
-	background-position: 0 -108px;
-	background-color: #e9e9e9;
-	padding: 10px;
-	cursor: pointer;
-	z-index: 8060;
-}
-
-.page-loading img {
-	width: 131px;
-	height: 28px;
-}
-
 p {
 	font-size: 24px;
 	line-height: 32px;
@@ -366,7 +349,6 @@ h3 {
 	margin-bottom: 40px;
 	padding-top: 5px;
 	border-top: 1px solid #e9e9e9;
-	overflow-y: scroll;
 	overflow-x: hidden;
 }
 
@@ -695,16 +677,6 @@ p,
 }
 
 
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-	   only screen and (min--moz-device-pixel-ratio: 1.5),
-	   only screen and (min-device-pixel-ratio: 1.5){
-
-	.page-loading img {
-		width: 65px;
-		height: 14px;
-	}
 }
 
 
